<resources>
    <string name="app_name">BebApp</string>
    <string name="version">Version name</string>
    <string name="IMEI" translatable="false">IMEI</string>
    <string name="allowReadPhoneState">Please allow READ_PHONE_STATE permission</string>
    <string name="first_blank_frame">First blank frame</string>
    <string name="second_blank_frame">Second blank frame</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>
    <string name="title_logout">Logout</string>
    <string name="title_edit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string-array name="pick_image_array">
        <item>Take a photo</item>
        <item>Pick a photo from the gallery</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_screen">Login Screen</string>
    <!-- RSS -->
    <string name="no_internet">No Internet connection</string>
    <string name="welcome_to_rss">Welcome to RSS Feed!</string>
    <string name="feed_loaded">Feed loaded</string>
    <string name="feed_loading_failed">Feed loading failed</string>
    <string name="feed_item_loading_failed">Feed item loading failed</string>
    <string name="feed_loaded_from_cache">Feed loaded from cache</string>
    <string name="rss_correct_url_request">You need to specify CORRECT link to rss feed</string>
    <string name="incorrect_rss_url">Incorrect RssFeed link</string>
    <string name="loading_failed">Loading failed</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="change_rss_source">Change RSS source</string>
    <!-- Feed adapter -->

    <!-- Shared preferences -->
    <string name="preference_last_userId">last_userId</string>
    <string name="preference_rssUrl">rssUrl</string>
</resources>
